Fixed page sizing on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -12,6 +12,7 @@
   --page-padding: 2em;
   --topbar-nav-display: flex;
   --topbar-nav-dropdown: none;
+  --home-p-width: 75%;
 }
 
 @media screen and (max-width: 600px) {
@@ -22,9 +23,10 @@
     --h4-font-size: 2em;
     --input-font-size: 1.5em;
     --input-height: 1.5em;
-    --page-padding: 1em;
+    --page-padding: 1em 0 0 0;
     --topbar-nav-display: none;
     --topbar-nav-dropdown: flex;
+    --home-p-width: 90%;
   }
 }
 
@@ -40,6 +42,7 @@
     --page-padding: 1em;
     --topbar-nav-display: none;
     --topbar-nav-dropdown: flex;
+    --home-p-width: 90%;
   }
 }
 
@@ -81,7 +84,6 @@
 body {
   background-color: var(--cream);
   margin: 0;
-  width: 100vw;
   overflow-x: hidden;
   overflow-y: scroll;
   width: 100%;
@@ -134,7 +136,7 @@ p {
 }
 
 #home p {
-  width: 50%;
+  width: var(--home-p-width);
   min-width: 300px;
 }
 
@@ -270,6 +272,7 @@ select:focus {
 
 .page-body {
   display: flex;
+  max-width: 100vw;
 }
 
 .page-content {
